--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
